Fix crash on exit when the text tool is active

This patch makes KisCanvasController responsitive for installing
and removing the event filter onto canvas widget. It allows the
controller to remove the event filter before the destruction.

BUG:330331